--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Rajinikanth DEVOPS Workshop Registration  For Dev-Deploy</title>
+    <title>Rajinikanth DEVOPS Workshop Registration--For Dev-Deploy</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
